--- a/src/main/resources/agenda_de_contatos/config-view.fxml
+++ b/src/main/resources/agenda_de_contatos/config-view.fxml
@@ -45,8 +45,11 @@
                                                 style="-fx-background-color: #ECF0F1;" styleClass="theme-button"
                                                 textFill="black" userData="font:#ECF0F1"/>
                                         <Button fx:id="btnFontPurple" onAction="#handleThemeChange"
-                                                style="-fx-background-color: #8A2BE2;"
-                                                styleClass="theme-button" textFill="black" userData="font:#8A2BE2"/>
+                                                style="-fx-background-color: #8A2BE2;" styleClass="theme-button"
+                                                textFill="black" userData="font:#8A2BE2"/>
+                                        <Button fx:id="btnFontMagenta" onAction="#handleThemeChange"
+                                                style="-fx-background-color: #FF00FF;" styleClass="theme-button"
+                                                textFill="black" userData="font:#FF00FF"/>
                                     </HBox>
                                     <HBox alignment="CENTER_LEFT" spacing="15.0">
                                         <Label minWidth="120" text="Cor dos Botões:"/>
@@ -60,8 +63,11 @@
                                                 style="-fx-background-color: #f0ad4e;" styleClass="theme-button"
                                                 textFill="white" userData="button:#f0ad4e"/>
                                         <Button fx:id="btnButtonPurple" onAction="#handleThemeChange"
-                                                style="-fx-background-color: #8A2BE2;"
-                                                styleClass="theme-button" textFill="white" userData="button:#8A2BE2"/>
+                                                style="-fx-background-color: #8A2BE2;" styleClass="theme-button"
+                                                textFill="white" userData="button:#8A2BE2"/>
+                                        <Button fx:id="btnButtonMagenta" onAction="#handleThemeChange"
+                                                style="-fx-background-color: #FF00FF;" styleClass="theme-button"
+                                                textFill="white" userData="button:#FF00FF"/>
                                     </HBox>
                                     <HBox alignment="CENTER_LEFT" spacing="15.0">
                                         <Label minWidth="120" text="Cor de Fundo:"/>
@@ -75,9 +81,11 @@
                                                 style="-fx-background-color: #2C3E50;" styleClass="theme-button"
                                                 textFill="white" userData="background:#2C3E50"/>
                                         <Button fx:id="btnBgPurple" onAction="#handleThemeChange"
-                                                style="-fx-background-color: #8A2BE2;"
-                                                styleClass="theme-button" textFill="white"
-                                                userData="background:#8A2BE2"/>
+                                                style="-fx-background-color: #8A2BE2;" styleClass="theme-button"
+                                                textFill="white" userData="background:#8A2BE2"/>
+                                        <Button fx:id="btnBgMagenta" onAction="#handleThemeChange"
+                                                style="-fx-background-color: #FF00FF;" styleClass="theme-button"
+                                                textFill="white" userData="background:#FF00FF"/>
                                     </HBox>
                                     <HBox alignment="CENTER_LEFT" spacing="15.0">
                                         <Label minWidth="120" text="Cor Barra Lateral:"/>
@@ -91,8 +99,11 @@
                                                 style="-fx-background-color: #2C3E50;" styleClass="theme-button"
                                                 textFill="white" userData="sidebar:#2C3E50"/>
                                         <Button fx:id="btnSidebarPurple" onAction="#handleThemeChange"
-                                                style="-fx-background-color: #8A2BE2;"
-                                                styleClass="theme-button" textFill="white" userData="sidebar:#8A2BE2"/>
+                                                style="-fx-background-color: #8A2BE2;" styleClass="theme-button"
+                                                textFill="white" userData="sidebar:#8A2BE2"/>
+                                        <Button fx:id="btnSidebarMagenta" onAction="#handleThemeChange"
+                                                style="-fx-background-color: #FF00FF;" styleClass="theme-button"
+                                                textFill="white" userData="sidebar:#FF00FF"/>
                                     </HBox>
 
                                 </VBox>
