--- a/src/main/resources/agenda_de_contatos/config-view.fxml
+++ b/src/main/resources/agenda_de_contatos/config-view.fxml
@@ -38,6 +38,7 @@
                                         <Button fx:id="btnFontBlue" styleClass="theme-button" onAction="#handleThemeChange" textFill="black" style="-fx-background-color: #ECF0F1;" userData="font:#ECF0F1"/>
                                         <Button fx:id="btnFontBlack2" styleClass="theme-button" onAction="#handleThemeChange" textFill="black" style="-fx-background-color: #000000;" userData="font:#000000"/>
                                         <Button fx:id="btnFontPink" styleClass="theme-button" onAction="#handleThemeChange" textFill="black" style="-fx-background-color: #FFC0CB;" userData="font:#FFC0CB"/>
+                                        <Button fx:id="btnFontCian" styleClass="theme-button" onAction="#handleThemeChange" textFill="black" style="-fx-background-color: #00FFFF;" userData="font:#00FFFF"/>
                                     </HBox>
                                     <HBox alignment="CENTER_LEFT" spacing="15.0">
                                         <Label text="Cor dos Botões:" minWidth="120"/>
@@ -46,6 +47,7 @@
                                         <Button fx:id="btnButtonOrange" styleClass="theme-button" onAction="#handleThemeChange" textFill="white" style="-fx-background-color: #f0ad4e;" userData="button:#f0ad4e"/>
                                         <Button fx:id="btnButtonBlack2" styleClass="theme-button" onAction="#handleThemeChange" textFill="white" style="-fx-background-color: #000000;" userData="button:#000000"/>
                                         <Button fx:id="btnButtonPink" styleClass="theme-button" onAction="#handleThemeChange" textFill="white" style="-fx-background-color: #FFC0CB;" userData="button:#FFC0CB"/>
+                                        <Button fx:id="btnButtonCian" styleClass="theme-button" onAction="#handleThemeChange" textFill="white" style="-fx-background-color: #00FFFF;" userData="button:#00FFFF"/>
                                     </HBox>
                                     <HBox alignment="CENTER_LEFT" spacing="15.0">
                                         <Label text="Cor de Fundo:" minWidth="120"/>
@@ -54,6 +56,7 @@
                                         <Button fx:id="btnBgBlue" styleClass="theme-button" onAction="#handleThemeChange" textFill="white" style="-fx-background-color: #2C3E50;" userData="background:#2C3E50"/>
                                         <Button fx:id="btnBgBlack" styleClass="theme-button" onAction="#handleThemeChange" textFill="white" style="-fx-background-color: #000000;" userData="background:#000000"/>
                                         <Button fx:id="btnBgPink" styleClass="theme-button" onAction="#handleThemeChange" textFill="white" style="-fx-background-color: #FFC0CB;" userData="background:#FFC0CB"/>
+                                        <Button fx:id="btnBgCian" styleClass="theme-button" onAction="#handleThemeChange" textFill="white" style="-fx-background-color: #00FFFF;" userData="background:#00FFFF"/>
                                     </HBox>
                                     <HBox alignment="CENTER_LEFT" spacing="15.0">
                                         <Label text="Cor Barra Lateral:" minWidth="120"/>
@@ -62,6 +65,7 @@
                                         <Button fx:id="btnSidebarBlue" styleClass="theme-button" onAction="#handleThemeChange" textFill="white" style="-fx-background-color: #2C3E50;" userData="sidebar:#2C3E50"/>
                                         <Button fx:id="btnSidebarBlack" styleClass="theme-button" onAction="#handleThemeChange" textFill="white" style="-fx-background-color: #000000;" userData="sidebar:#000000"/>
                                         <Button fx:id="btnSidebarPink" styleClass="theme-button" onAction="#handleThemeChange" textFill="white" style="-fx-background-color: #FFC0CB;" userData="sidebar:#FFC0CB"/>
+                                        <Button fx:id="btnSidebarCian" styleClass="theme-button" onAction="#handleThemeChange" textFill="white" style="-fx-background-color: #00FFFF;" userData="sidebar:#00FFFF"/>
                                     </HBox>
 
                                 </VBox>
