Style(theme): Adição da cor #4B0082

--- a/src/main/resources/agenda_de_contatos/config-view.fxml
+++ b/src/main/resources/agenda_de_contatos/config-view.fxml
@@ -31,30 +31,38 @@
                                         <Insets top="20.0" left="10.0" right="10.0" bottom="10.0"/>
                                     </padding>
 
+
                                     <HBox alignment="CENTER_LEFT" spacing="15.0">
                                         <Label text="Cor da Fonte:" minWidth="120"/>
                                         <Button fx:id="btnFontWhite" styleClass="theme-button" onAction="#handleThemeChange" textFill="black" style="-fx-background-color: #FFFFFF;" userData="font:#FFFFFF"/>
                                         <Button fx:id="btnFontBlack" styleClass="theme-button" onAction="#handleThemeChange" textFill="white" style="-fx-background-color: #333333;" userData="font:#333333"/>
                                         <Button fx:id="btnFontBlue" styleClass="theme-button" onAction="#handleThemeChange" textFill="black" style="-fx-background-color: #ECF0F1;" userData="font:#ECF0F1"/>
+                                        <Button fx:id="btnFontPurple" styleClass="theme-button" onAction="#handleThemeChange" textFill="white" style="-fx-background-color: #4B0082;" userData="font:#4B0082"/>
                                     </HBox>
                                     <HBox alignment="CENTER_LEFT" spacing="15.0">
                                         <Label text="Cor dos Botões:" minWidth="120"/>
                                         <Button fx:id="btnButtonWhite" styleClass="theme-button" onAction="#handleThemeChange" textFill="black" style="-fx-background-color: #FFFFFF;" userData="button:#FFFFFF"/>
                                         <Button fx:id="btnButtonBlue" styleClass="theme-button" onAction="#handleThemeChange" textFill="white" style="-fx-background-color: #4A89F3;" userData="button:#4A89F3"/>
                                         <Button fx:id="btnButtonOrange" styleClass="theme-button" onAction="#handleThemeChange" textFill="white" style="-fx-background-color: #f0ad4e;" userData="button:#f0ad4e"/>
+                                        <Button fx:id="btnButtonPurple" styleClass="theme-button" onAction="#handleThemeChange" textFill="white" style="-fx-background-color: #4B0082;" userData="button:#4B0082"/>
                                     </HBox>
+
                                     <HBox alignment="CENTER_LEFT" spacing="15.0">
                                         <Label text="Cor de Fundo:" minWidth="120"/>
                                         <Button fx:id="btnBgLight" styleClass="theme-button" onAction="#handleThemeChange" textFill="black" style="-fx-background-color: #F4F4F4;" userData="background:#F4F4F4"/>
                                         <Button fx:id="btnBgDark" styleClass="theme-button" onAction="#handleThemeChange" textFill="white" style="-fx-background-color: #3C3F41;" userData="background:#3C3F41"/>
                                         <Button fx:id="btnBgBlue" styleClass="theme-button" onAction="#handleThemeChange" textFill="white" style="-fx-background-color: #2C3E50;" userData="background:#2C3E50"/>
+                                        <Button fx:id="btnBgPurple" styleClass="theme-button" onAction="#handleThemeChange" textFill="white" style="-fx-background-color: #4B0082;" userData="background:#4B0082"/>
                                     </HBox>
+
                                     <HBox alignment="CENTER_LEFT" spacing="15.0">
                                         <Label text="Cor Barra Lateral:" minWidth="120"/>
                                         <Button fx:id="btnSidebarLight" styleClass="theme-button" onAction="#handleThemeChange" textFill="black" style="-fx-background-color: #F4F4F4;" userData="sidebar:#F4F4F4"/>
                                         <Button fx:id="btnSidebarDark" styleClass="theme-button" onAction="#handleThemeChange" textFill="white" style="-fx-background-color: #3C3F41;" userData="sidebar:#3C3F41"/>
                                         <Button fx:id="btnSidebarBlue" styleClass="theme-button" onAction="#handleThemeChange" textFill="white" style="-fx-background-color: #2C3E50;" userData="sidebar:#2C3E50"/>
+                                        <Button fx:id="btnSidebarPurple" styleClass="theme-button" onAction="#handleThemeChange" textFill="white" style="-fx-background-color: #4B0082;" userData="sidebar:#4B0082"/>
                                     </HBox>
+
 
                                 </VBox>
                             </content>
