--- a/src/main/resources/agenda_de_contatos/contato-form-view.fxml
+++ b/src/main/resources/agenda_de_contatos/contato-form-view.fxml
@@ -37,6 +37,8 @@
                     <TextField fx:id="emailField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                     <Label text="Endereço:" GridPane.rowIndex="4" />
                     <TextField fx:id="enderecoField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                    <Label text="Observação:" GridPane.rowIndex="5" />
+                    <TextField fx:id="observacaoField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                 </GridPane>
                 <Button onAction="#handleSalvar" text="Salvar" />
             </children>
